--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.7",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
