--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.29.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.7",
@@ -55,7 +56,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "webpack": "^4.29.6",
+    "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   }
 }
