--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1",
